--- a/ClientApp/public/css/sb-admin-2.css
+++ b/ClientApp/public/css/sb-admin-2.css
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
-  --primary: #4e73df;
+  --primary: #1F3B4D;
   --secondary: #858796;
   --success: #1cc88a;
   --info: #36b9cc;
@@ -6420,7 +6420,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #4e73df !important;
+  background-color: #1F3B4D !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9909,8 +9909,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #1F3B4D;
+  background-image: linear-gradient(180deg, #1F3B4D 10%, #224abe 100%);
   background-size: cover;
 }
 
